<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Derive</string>
    <string name="title_activity_derive">DeriveActivity</string>
    <string name="derive_title_hint">Enter a title for the Derive.</string>
    <string name="derive_title_label">Title</string>
    <string name="derive_notes_hint">Enter any notes you have.</string>
    <string name="derive_notes_label">Notes</string>
    <string name="derive_instruction_label">Instructions</string>
    <string name="derive_details_label">Details</string>
    <string name="derive_done_label">Done?</string>
    <string name="take">Capture</string>
    <string name="derives_title">Derives</string>
    <string name="date_picker_title">Date of Derive:</string>
    <string name="time_picker_title">Time of Derive:</string>
    <string name="dialog_editDate">Date</string>
    <string name="dialog_editTime">Time</string>
    <string name="dialog_editDateOrTime">Do you want to edit the date or time?</string>
    <string name="new_derive">New Derive</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Experience what is around you.</string>
    <string name="delete_derive">Delete</string>
    <string name="statementBlocksForward">Go 2 blocks forward </string>
    <string name="statementBlocksRight">Go 3 blocks right</string>
    <string name="statementBlocksBack">Go 2 blocks back</string>
    <string name="statementBlocksLeft">Go 1 blocks Left</string>
    <string name="statementClimbForward">Climb onto the nearest object and navigate your way forward a block without touching the ground</string>
    <string name="statementClimbRight">Climb onto the nearest object and navigate your way right a block without touching the ground</string>
    <string name="statementClimbBack">Climb onto the nearest object and navigate your way back a block without touching the ground</string>
    <string name="statementClimbLeft">Climb onto the nearest object and navigate your way left a block without touching the ground</string>
    <string name="statementFollowShirt">Follow a person with a red colored shirt for blocks</string>
	<string name="statementFollowPants">Follow a person with a blue colored pair of pants for blocks</string>
	<string name="statementFollowShorts">Follow a person with a tan colored pair of shorts for blocks</string>
	<string name="statementFollowHat">Follow a person with a purple colored hat for blocks</string>
</resources>
