<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:background="#444444"
  >
  <LinearLayout 
    android:background="#444444"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    >
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginRight="4dp"
      >
      <ImageView android:id="@+id/derive_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"/>
      <ImageButton android:id="@+id/derive_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        />     
    </LinearLayout>
    <LinearLayout
      android:background="#444444"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_weight="1"
      >
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/derive_title_label"
        style="?android:listSeparatorTextViewStyle"
        />
      <EditText android:id="@+id/derive_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:hint="@string/derive_title_hint"
        />
    </LinearLayout>
  </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#b5b5b5"
        android:text="@string/derive_details_label"
        style="?android:listSeparatorTextViewStyle"
        />    
    <Button android:id="@+id/derive_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <CheckBox android:id="@+id/derive_done"
        android:textColor="#b5b5b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/derive_done_label"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#b5b5b5"
        android:paddingTop="24dp"
        android:text="@string/derive_instruction_label"
        style="?android:listSeparatorTextViewStyle"
        /> 
     <TextView
        android:id="@+id/statement_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#b5b5b5"
		android:layout_marginLeft="24dp"
		android:layout_marginRight="24dp"
        />
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:textColor="#b5b5b5"
        android:text="@string/derive_notes_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/derive_notes"
        android:textColor="#b5b5b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:hint="@string/derive_notes_hint"
        />
    
</LinearLayout>
